update: changes to module component and styling

--- a/src/components/Modules/Module_view.css
+++ b/src/components/Modules/Module_view.css
@@ -10,7 +10,11 @@
   margin: 0.5rem;
 }
 
-a {
+.active {
+  width: 150%;
+}
+
+.moduleHeader {
   display: flex;
   justify-content: space-between;
   font-weight: bold;
