--- a/src/Custom.scss
+++ b/src/Custom.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+@import "./components/Modules/Module_view.scss";
 
 .container-fluid {
   --bs-gutter-x: 0 rem;
