--- a/src/Custom.scss
+++ b/src/Custom.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+@import "./Components/Navbar/Navbar.scss";
 @import "./components/Modules/Module_view.scss";
 
 .container-fluid {
