ref: changing active state from Module component

--- a/src/components/Modules/Module_view.scss
+++ b/src/components/Modules/Module_view.scss
@@ -21,16 +21,7 @@
 .module {
   padding: 2rem;
   width: 100%;
-}
-
-.hideToggle {
-  display: none;
-}
-
-.moduleHeader {
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
+  border-radius: 2%;
 }
 
 .moduleInfo {
