--- a/src/components/Authentication/Login.scss
+++ b/src/components/Authentication/Login.scss
@@ -7,6 +7,10 @@ img {
   margin-right: 24px;
 }
 
+.btn {
+  align-self: center;
+}
+
 #Google {
   font-family: "Roboto-Medium", sans-serif;
   font-size: 1rem;
