--- a/src/components/Authentication/Login.scss
+++ b/src/components/Authentication/Login.scss
@@ -42,8 +42,14 @@ img {
   margin-right: 24px;
 }
 
-.btn {
-  align-self: center;
+svg {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-bottom: -0.5rem;
+}
+
+.login-box {
+  background-color: #dee2e6;
 }
 
 #Google {
@@ -51,7 +57,6 @@ img {
   font-size: 1rem;
   height: 60px;
   background-color: #ffffff;
-  border: solid #0000006c 1px;
   padding: 8px;
 
   &:hover {
