--- a/src/components/Authentication/Login.scss
+++ b/src/components/Authentication/Login.scss
@@ -43,13 +43,15 @@ img {
 }
 
 svg {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   margin-bottom: -0.5rem;
 }
 
 .login-box {
   background-color: #dee2e6;
+  padding: 3rem;
+  text-align: center;
 }
 
 #Google {
